fix(jdbc-sink): Handle JDBC connection error by recreating the connection (#13279)